modified:   index.html

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 </div>
 
 
-<p>In the code below, we present simple classification algorithm based on the random forests method. The main idea follows from the heuristicall observation that there enough to choose only about (trainingProb) 8% of all samples from given training data to predict with an estimated accuracy about 98%. We run prediction for 30 (nTrials) times and remember predicted values (“answersM”):</p>
+<p>In the code below, we present simple classification algorithm based on the random forests method. The main idea follows from the heuristic observation that there enough to choose only about (trainingProb) 8% of all samples from given training data to predict with an estimated accuracy about 98%. We run prediction for 30 (nTrials) times and remember predicted values (“answersM”):</p>
 <ul>
 <li>[1] A A C … B</li>
 <li>[2] B A C … B</li>
